# image2md

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: image2md_test_report.md
examples/: 83635935.json  anthropic_integration.py  azure.env.example  azure_cli_example.sh  azure_example.py  azure_example_with_image.py  azure_minimal_example.py  claude_conversion.py  claude_full_integration.py  claude_integration.py  claude_sonnet_conversion.py  compare_claude_models.py  compare_models.py  compare_specific_models.py  example_usage.py  extending_llm_converter.py  gemini_integration.py  image2md_example.py  list_gemini_models.py  llm_cli_example.sh  llm_converter_example.py  test_anthropic_converter.py  test_backtick_removal.py  test_claude_converter.py  test_gemini_converter.py
examples/anthropic_integration_output/: anthropic_result.json
examples/anthropic_test_output/: custom_model_test.json  custom_model_test.md  factory_test.json  factory_test.md  save_method_test.json  save_method_test.md
examples/claude_comparison/: claude_model_diff.html  model_comparison.md
examples/claude_conversion_output/: claude_result.json  claude_result.md
examples/claude_integration_output/: claude_result.json  claude_result.md
examples/claude_sonnet_output/: claude_sonnet_result.json  claude_sonnet_result.md
examples/claude_test_output/: custom_model_test.json  custom_model_test.md  factory_test.json  factory_test.md  save_method_test.json  save_method_test.md
examples/extended_llm_converter_output/: claude_factory_output.json  claude_factory_output.md  claude_output.json  gemini_factory_output.json  gemini_output.json  gemini_output.md
image2md/: __init__.py  anthropic_converter.py  azure_converter.py  base.py  cli.py  factory.py  gemini_converter.py  llm_converter.py  ocr_converter.py  structure_converter.py  vision_converter.py
tests/: __init__.py  test_azure_converter.py  test_image2md.py
